# employee-fullstack

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: db.rs  lib.rs  main.rs  models.rs
backend/src/handlers/: employee_handler.rs  mod.rs
database/init-employee/: employee-directory.sql
frontend/: package-lock.json  package.json
frontend/.angular/cache/21.1.2/frontend/: .tsbuildinfo
frontend/src/app/: app.html  app.ts
frontend/src/app/dialogs/employee-dialogs/employee-dialog/: employee-dialog.html  employee-dialog.ts
frontend/src/app/models/: model.ts
frontend/src/app/services/: employee.ts
